--- a/ronny-site/src/app/pages/bio/bio.component.html
+++ b/ronny-site/src/app/pages/bio/bio.component.html
@@ -8,8 +8,8 @@
   <br>
   <ion-text><p class='bio-text'>
     <br>
-Ronny Bazan is an assistant teaching professor for the IT Program in the Electrical Engineering and Computer Science Department at the University of Missouri. He was the recipient of a Fulbright scholarship to obtain his MS in Computer Science at MU where he was awarded as an Outstanding Master Student. He went on to earn a PhD in Electrical Engineering and Computer Science from the University of Missouri.
-Before joining MU, he worked as a senior system administrator in industry. During that time he obtained training in Advanced Windows Servers administration in Japan and Computer Networking and Advanced Linux Servers administration in India through long-term scholarships. He has obtained professional certifications from Microsoft, Cisco and VMware.
+Ronny Bazan is an assistant teaching professor for the IT Program in the Electrical Engineering and Computer Science Department at the University of Missouri. He was the recipient of a Fulbright scholarship to obtain his MS in Computer Science at MU where he was recognized as an Outstanding Master Student. He went on to earn a PhD in Electrical Engineering and Computer Science from the University of Missouri.
+Before joining MU, he worked as a Senior System Administrator in the industry. During that time, he obtained training in Advanced Windows Servers Administration in Japan, and Computer Networking and Advanced Linux Servers Administration in India, through long-term scholarships. He has obtained professional certifications from Microsoft, Cisco and VMware.
   </p></ion-text>
   <br>
   
