--- a/ronny-site/src/app/pages/bio/bio.component.scss
+++ b/ronny-site/src/app/pages/bio/bio.component.scss
@@ -3,7 +3,9 @@
 }
 #ronny-teaching {
     width: 100%;
-    height: fit-content;
+    height: 80vh;
+    background-image: url('../../../assets/ronny_teaching.jpg');
+    background-size: cover;
     margin-bottom: -10px;
 }
 #title {
